# psforge

./: .gitignore  CONTRIBUTING.md  PROJECT_ATLAS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  update-application.ps1  vite.config.ts  wdio.conf.cjs
.github/workflows/: ci.yml  release.yml
e2e/: about.spec.ts  app.spec.ts  editor.spec.ts  features.spec.ts  intellisense.spec.ts  params.spec.ts  script-run.spec.ts  session-restore.spec.ts  settings.spec.ts  syntax-highlighting.spec.ts  terminal.spec.ts  variables.spec.ts  wdio.d.ts
public/: preload.js
src/: App.tsx  commands.ts  main.tsx  ps-grammar.ts  sanitize-paste.ts  store.tsx  styles.css  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  powershell.rs  settings.rs  terminal.rs  utils.rs
src-tauri/tests/: batch_associations_e2e.rs  command_validation_e2e.rs  completions_e2e.rs  encoding_edge_cases_e2e.rs  execution_policy_e2e.rs  failure_modes_e2e.rs  file_ops_e2e.rs  ise_retirement_smoke_e2e.rs  script_args_e2e.rs  settings_e2e.rs  snippets_e2e.rs
src/components/: AboutDialog.tsx  CommandPalette.tsx  EditorPane.tsx  HelpPane.tsx  KeyboardShortcutPanel.tsx  OutputPane.tsx  ParamPromptDialog.tsx  ScriptSigningDialog.tsx  SettingsPanel.tsx  ShowCommandPane.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.tsx  Toolbar.tsx  WelcomePane.tsx
tools/: generate-file-association-icon.ps1  generate-source-icon.ps1
