[package]
name = "psforge"
version = "1.0.4"
description = "PSForge - Modern PowerShell Editor"
authors = ["PSForge Contributors"]
edition = "2021"

[lib]
name = "psforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
winreg = "0.55"
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
encoding_rs = "0.8"
portable-pty = "0.9"

[dev-dependencies]
# tempfile provides OS-managed temporary directories for integration tests.
# Tests write to temp dirs so they never corrupt the real user AppData/PSForge directory.
tempfile = "3"
